--- a/requirements-fakefront.txt
+++ b/requirements-fakefront.txt
@@ -6,21 +6,21 @@
 #
 --only-binary :all:
 
-boto3==1.37.33 \
-    --hash=sha256:7b1b1bc69762975824e5a5d570880abebf634f7594f88b3dc175e8800f35be1a
-    # via -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
-botocore==1.37.33 \
-    --hash=sha256:4a167dfecae51e9140de24067de1c339acde5ade3dad524a4600ac2c72055e23
+boto3==1.38.2 \
+    --hash=sha256:ef3237b169cd906a44a32c03b3229833d923c9e9733355b329ded2151f91ec0b
+    # via -r requirements.in
+botocore==1.38.2 \
+    --hash=sha256:5d9cffedb1c759a058b43793d16647ed44ec87072f98a1bd6cd673ac0ae6b81d
     # via
-    #   -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    #   -r requirements.in
     #   boto3
     #   s3transfer
 cachetools==5.5.2 \
     --hash=sha256:d26a22bcc62eb95c3beabd9f1ee5e820d3d2704fe2967cbe350e20c8ffcd3f0a
-    # via -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    # via -r requirements.in
 cdn-definitions==3.3.0 \
     --hash=sha256:e614d54ef65f1873eed2f7292e3b96b8a6eade967cdca1f8fe2fc13eb66cea1a
-    # via -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    # via -r requirements.in
 certifi==2025.1.31 \
     --hash=sha256:ca78db4565a652026a4db2bcdf68f2fb589ea80d0be70e03929ed730746b84fe
     # via requests
@@ -220,10 +220,10 @@ cryptography==44.0.2 \
     --hash=sha256:d1c3572526997b36f245a96a2b1713bf79ce99b271bbcf084beb6b9b075f29ea \
     --hash=sha256:efcfe97d1b3c79e486554efddeb8f6f53a4cdd4cf6086642784fa31fc384e1d7 \
     --hash=sha256:f514ef4cd14bb6fb484b4a60203e912cfcb64f2ab139e88c2274511514bf7308
-    # via -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    # via -r requirements.in
 docutils==0.21.2 \
     --hash=sha256:dafca5b9e384f0e419294eb4d2ff9fa826435bf15f15b7bd45723e8ad76811b2
-    # via -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    # via -r requirements.in
 frozendict==2.4.6 \
     --hash=sha256:02331541611f3897f260900a1815b63389654951126e6e65545e529b63c08361 \
     --hash=sha256:0aaa11e7c472150efe65adbcd6c17ac0f586896096ab3963775e1c5c58ac0098 \
@@ -278,8 +278,8 @@ jmespath==1.0.1 \
     # via
     #   boto3
     #   botocore
-packaging==24.2 \
-    --hash=sha256:09abb1bccd265c01f4a3aa3f7a7db064b36514d2cba19a2f694fe6150451a759
+packaging==25.0 \
+    --hash=sha256:29572ef2b1f17581046b3a2227d5c611fb25ec70ca1ba8554b24b0e69331a484
     # via gunicorn
 pycparser==2.22 \
     --hash=sha256:c3702b6d3dd8c7abc1afa565d7e63d53a1d0bd86cdc24edd75470f4de499cfcc
@@ -341,15 +341,15 @@ pyyaml==6.0.2 \
     --hash=sha256:f753120cb8181e736c57ef7636e83f31b9c0d1722c516f7e86cf15b7aa57ff12 \
     --hash=sha256:ff3824dc5261f50c9b0dfb3be22b4567a6f938ccce4587b38952d85fd9e9afe4
     # via
-    #   -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    #   -r requirements.in
     #   cdn-definitions
 requests==2.32.3 \
     --hash=sha256:70761cfe03c773ceb22aa2f671b4757976145175cdfca038c02654d061d6dcc6
     # via
-    #   -r /home/runner/work/exodus-lambda/exodus-lambda/requirements.in
+    #   -r requirements.in
     #   cdn-definitions
-s3transfer==0.11.4 \
-    --hash=sha256:ac265fa68318763a03bf2dc4f39d5cbd6a9e178d81cc9483ad27da33637e320d
+s3transfer==0.12.0 \
+    --hash=sha256:35b314d7d82865756edab59f7baebc6b477189e6ab4c53050e28c1de4d9cce18
     # via boto3
 six==1.17.0 \
     --hash=sha256:4721f391ed90541fddacab5acf947aa0d3dc7d27b2e1e8eda2be8970586c3274
