--- a/test-requirements.in
+++ b/test-requirements.in
@@ -9,3 +9,5 @@ importlib-metadata
 bandit
 safety
 freezegun
+# marshmallow (dependency of safety) version 4.0 introduces breaking changes
+marshmallow<4
