Temporary fix for broken pip-compile [RHELDST-31877]
* revert the previous attempt in workflow setting
* pin pip version in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -132,7 +132,9 @@ addopts = -v
 relative_files = true
 
 [testenv:pip-compile]
-deps = pip-tools
+deps =
+    pip-tools
+    pip<=25.0  # Temporary fix for RHELDST-31877
 basepython = python3.11
 skip_install = true
 skipsdist = true
