--- a/.github/workflows/pip-compile.yml
+++ b/.github/workflows/pip-compile.yml
@@ -15,7 +15,7 @@ jobs:
          python-version: "3.11"
 
      - name: Install tox
-       run: pip install "pip<=25.0" tox
+       run: pip install tox
 
      - name: pip-compile
        uses: technote-space/create-pr-action@v2
